--- a/_config.yml
+++ b/_config.yml
@@ -54,8 +54,10 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
+  
   BASE_PATH : /blog
-
+  #BASE_PATH : false
+  
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
   #
@@ -80,13 +82,13 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : false
+    provider : disqus
     disqus :
-      short_name : jekyllbootstrap
+      short_name : lovehq
     livefyre :
       site_id : 123
     intensedebate :
-      account : 123abc
+      account : a7b667bffef50e829e9881535f7a5ed4
     facebook :
       appid : 123
       num_posts: 5
